[gd_scene load_steps=5 format=3 uid="uid://d0x3d2x1idfw8"]

[ext_resource type="Script" uid="uid://bj0p4rvh4tnfg" path="res://nodes/render/ui-render-handler/ui-visuals/status-bar/status_bar.gd" id="1_w73we"]

[sub_resource type="Gradient" id="Gradient_8s2jg"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bws26"]
gradient = SubResource("Gradient_8s2jg")
width = 1

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_03xf5"]

[node name="StatusBar" type="PanelContainer"]
offset_right = 1.0
offset_bottom = 153.0
script = ExtResource("1_w73we")
_label = "PTS"

[node name="GhostValueTextureProgressBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.0
value = 1.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture1D_bws26")
texture_progress = SubResource("PlaceholderTexture2D_03xf5")

[node name="TrueValueTextureProgressBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.0
value = 1.0
nine_patch_stretch = true
texture_progress = SubResource("PlaceholderTexture2D_03xf5")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "PTS: 0"
autowrap_mode = 1

[node name="UpdateGhostProgressDelayTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="UpdateGhostProgressDelayTimer" to="." method="_on_update_ghost_progress_delay_timer_timeout"]
